add default role when create traveler